--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
                         <br>
                         <br>
                         <div class="destination-list-content">
-                            <a class="destination-list-content-title" href="#">GituB link:
+                            <a class="destination-list-content-title" href="#">GituB link:https://github.com/YAMUNA0403
                             </a>
                             
                         </div>
